--- a/mshop/src/main/webapp/backjsp/index.html
+++ b/mshop/src/main/webapp/backjsp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>管理</title>
+<title>远通网上商城-商品管理</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="js/jquery-easyui-1.4.1/themes/default/easyui.css" />
 <link rel="stylesheet" type="text/css" href="js/jquery-easyui-1.4.1/themes/icon.css" />
