--- a/mshop/src/main/webapp/backjsp/index.html
+++ b/mshop/src/main/webapp/backjsp/index.html
@@ -310,7 +310,7 @@
 <body>
 	
 	<table id="cityTable"></table>
-	<div id="form" class="easyui-dialog" title="管理"
+	<div id="form" class="easyui-dialog" title="商品维护"
 		style="width:700px;height:500px;"
 		data-options="iconCls:'icon-save',modal:true,closed:true"
 		buttons="#dlg-buttons">
