--- a/mshop/src/main/webapp/jsp/my-info-img.html
+++ b/mshop/src/main/webapp/jsp/my-info-img.html
@@ -5,9 +5,9 @@
 <head>
 <meta http-equiv="Cache-Control" content="max-age=300" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>我的信息 - 淘淘</title>
-<meta name="Keywords" content="java,淘淘java" />
-<meta name="description" content="在淘淘中找到了29910件java的类似商品，其中包含了“图书”，“电子书”，“教育音像”，“骑行运动”等类型的java的商品。" />
+<title>我的信息 - 远通</title>
+<meta name="Keywords" content="java,远通java" />
+<meta name="description" content="在远通中找到了29910件java的类似商品，其中包含了“图书”，“电子书”，“教育音像”，“骑行运动”等类型的java的商品。" />
 <link rel="stylesheet" type="text/css" href="/css/base.css" media="all" />
 <link rel="stylesheet" type="text/css" href="/css/myjd.common.css" media="all" />
 <link rel="stylesheet" type="text/css" href="/css/myjd.info.css" media="all" />
@@ -21,10 +21,10 @@
 <div id="shortcut-2013">
 	<div class="w">
 		<ul class="fl lh">
-			<li class="fore1 ld" clstag="homepage|keycount|home2013|01a"><b></b><a href="javascript:addToFavorite()" rel="nofollow">收藏淘淘</a></li>
+			<li class="fore1 ld" clstag="homepage|keycount|home2013|01a"><b></b><a href="javascript:addToFavorite()" rel="nofollow">收藏远通</a></li>
 		</ul>
 		<ul class="fr lh">
-			<li class="fore1" id="loginbar" clstag="homepage|keycount|home2013|01b">您好！欢迎来到淘淘！<a href="javascript:login()">[登录]</a>&nbsp;<a href="javascript:regist()">[免费注册]</a></li>
+			<li class="fore1" id="loginbar" clstag="homepage|keycount|home2013|01b">您好！欢迎来到远通！<a href="javascript:login()">[登录]</a>&nbsp;<a href="javascript:regist()">[免费注册]</a></li>
 			<li class="fore2 ld" clstag="homepage|keycount|home2013|01c">
 				<s></s>
 				<a href="/jsp/my-orders.html" rel="nofollow">我的订单</a>
@@ -35,7 +35,7 @@
 			</li>
 			<li class="fore3 ld menu" id="app-jd" data-widget="dropdown" clstag="homepage|keycount|home2013|01d">
 				<s></s><i></i><span class="outline"></span><span class="blank"></span>
-				<a href="http://app.jd.com/" target="_blank">手机淘淘</a><b></b>
+				<a href="http://app.jd.com/" target="_blank">手机远通</a><b></b>
 			</li>
 			<li class="fore4 ld menu" id="biz-service" data-widget="dropdown" clstag="homepage|keycount|home2013|01e">
 				<s></s>
@@ -61,14 +61,14 @@
 					<dl class="item fore1">
 						<dt>特色栏目</dt>
 						<dd>
-							<div><a target="_blank" href="http://mobile.jd.com/index.do">淘淘通信</a></div>
+							<div><a target="_blank" href="http://mobile.jd.com/index.do">远通通信</a></div>
 							<div><a target="_blank" href="http://jdstar.jd.com/">校园之星</a></div>
 							<div><a target="_blank" href="http://my.jd.com/personal/guess.html">为我推荐</a></div>
 							<div><a target="_blank" href="http://shipingou.jd.com/">视频购物</a></div>
-							<div><a target="_blank" href="http://club.jd.com/">淘淘社区</a></div>
+							<div><a target="_blank" href="http://club.jd.com/">远通社区</a></div>
 							<div><a target="_blank" href="http://read.jd.com/">在线读书</a></div>
 							<div><a target="_blank" href="http://diy.jd.com/">装机大师</a></div>
-							<div><a target="_blank" href="http://giftcard.jd.com/market/index.action">淘淘E卡</a></div>
+							<div><a target="_blank" href="http://giftcard.jd.com/market/index.action">远通E卡</a></div>
 							<div><a target="_blank" href="http://channel.jd.com/jiazhuang.html">家装城</a></div>
 							<div><a target="_blank" href="http://dapeigou.jd.com/">搭配购</a></div>
 							<div><a target="_blank" href="http://xihuan.jd.com/">我喜欢</a></div>
@@ -177,7 +177,7 @@
 </div>
 </div>
 <div id="footer-2013">
-	<div class="links"><a href="http://www.jd.com/intro/about.aspx" target="_blank" rel="nofollow">关于我们</a>|<a href="http://www.jd.com/contact/" target="_blank" rel="nofollow">联系我们</a>|<a href="http://zhaopin.jd.com/" target="_blank" rel="nofollow">人才招聘</a>|<a href="http://www.jd.com/contact/joinin.aspx" target="_blank" rel="nofollow">商家入驻</a>|<a href="http://jzt.jd.com" target="_blank" rel="nofollow">营销中心</a>|<a href="http://app.jd.com/" target="_blank" rel="nofollow">手机淘淘</a>|<a href="http://club.jd.com/links.aspx" target="_blank">友情链接</a>|<a href="http://media.jd.com/" target="_blank">销售联盟</a>|<a target="_blank" href="http://club.jd.com/">淘淘社区</a>|<a target="_blank" href="http://gongyi.jd.com">淘淘公益</a>|<a target="_blank" href="http://en.jd.com/">English Site</a></div>
+	<div class="links"><a href="http://www.jd.com/intro/about.aspx" target="_blank" rel="nofollow">关于我们</a>|<a href="http://www.jd.com/contact/" target="_blank" rel="nofollow">联系我们</a>|<a href="http://zhaopin.jd.com/" target="_blank" rel="nofollow">人才招聘</a>|<a href="http://www.jd.com/contact/joinin.aspx" target="_blank" rel="nofollow">商家入驻</a>|<a href="http://jzt.jd.com" target="_blank" rel="nofollow">营销中心</a>|<a href="http://app.jd.com/" target="_blank" rel="nofollow">手机远通</a>|<a href="http://club.jd.com/links.aspx" target="_blank">友情链接</a>|<a href="http://media.jd.com/" target="_blank">销售联盟</a>|<a target="_blank" href="http://club.jd.com/">远通社区</a>|<a target="_blank" href="http://gongyi.jd.com">远通公益</a>|<a target="_blank" href="http://en.jd.com/">English Site</a></div>
 </div>
 <div class="w" clstag="homepage|keycount|home2013|37a">
 	<div id="service-2013">
@@ -229,9 +229,9 @@
 				<div><a href="http://help.jd.com/help/question-79.html" target="_blank">夺宝岛</a></div>
 				<div><a href="http://help.jd.com/help/question-86.html" target="_blank">DIY装机</a></div>
 				<div><a href="http://fuwu.jd.com/" target="_blank" rel="nofollow">延保服务</a></div>
-				<div><a href="http://giftcard.jd.com/market/index.action" target="_blank" rel="nofollow">淘淘E卡</a></div>
+				<div><a href="http://giftcard.jd.com/market/index.action" target="_blank" rel="nofollow">远通E卡</a></div>
 				<div><a href="http://help.jd.com/help/question-91.html" target="_blank" rel="nofollow">节能补贴</a></div>
-				<div><a href="http://mobile.jd.com/" target="_blank" rel="nofollow">淘淘通信</a></div>
+				<div><a href="http://mobile.jd.com/" target="_blank" rel="nofollow">远通通信</a></div>
 			</dd>
 		</dl>
 		<div class="fr">
